Add up to lesson 7.F

--- a/notes/2021-2022.md
+++ b/notes/2021-2022.md
@@ -1329,3 +1329,185 @@ N：人、物事、動作の名詞
 > 日本に3年間住みましたが、日本での生活<span style="color:red">をとおして</span>、日本の習慣や日本人の考え方を知ることが出来ました。
 
 > クラブ活動<span style="color:red">をとおして</span>礼儀作法を学んだ。
+
+# 第7課
+
+## 7.A) おV<s>ます</s>＋ください
+
+> 少々<span style="color:red">お</span>待ち<span style="color:red">ください</span>。 (お＋待ち<s>ます</s>＋ください)
+
+> どうぞこのペンを<span style="color:red">お</span>使い<span style="color:red">ください</span>。（お＋使い<s>ます</s>＋ください）
+
+> 危ないですから、黄色い線の内側に<span style="color:red">お</span>下がり<span style="color:red">ください</span>。
+
+> パスポートと航空券を<span style="color:red">お</span>見せ<span style="color:red">ください</span>。
+
+❗　「ます」の前が一音節（une syllabeひらがな一つで表される）の語には使われない。別の言い方あり。  
+- 見ます　->　❌お見ください　->　✅ご覧ください　（「おV<s>ます</s>＋ください」の形は無し）
+- 寝ます　->　❌お寝ください　->　✅お休みください
+- 来ます　->　❌お来ください　->　✅いらっしゃってください、お越しください
+- します　->　❌おしください　->　✅なさってください　（「おV<s>ます</s>＋ください」の形は無し）
+
+❗　３グループ動詞（irrégulier）：「Nなさってください」  
+Nが漢字のことばの場合：「ごNください」の言い方もあり。
+> 準備<span style="color:red">なさってください</span>　/　<span style="color:red">ご</span>準備<span style="color:red">ください</span>
+
+> 説明<span style="color:red">なさってください</span>　/　<span style="color:red">ご</span>説明<span style="color:red">ください</span>
+
+> ７階レストランへは、エレベーターを<span style="color:red">ご</span>利用<span style="color:red">ください</span>。
+
+## 7.B) そのうち～かと思って・・・んですが：そのうち（Vdico）かと思ってVneutreんですが
+
+> <span style="color:red">そのうち</span>バスが来る<span style="color:red">かと思って</span>待っていた<span style="color:red">んですが</span>、20分経っても来なかったんです。
+
+そのうち(bientôt)  
+> 春子：うちの子、まだ25m泳げないの。もう中学生なのに。  
+> ゆり：大丈夫、そのうち泳げるようになるよ。
+
+## 7.C) 擬態語
+
+<table>
+	<tr>
+		<td></td>
+		<td>状況</td>
+		<td>何が/を</td>
+		<td>いっしょに使う動詞</td>
+	<tr>
+	<tr>
+		<td>ずきんと</td>
+		<td>虫歯で/リュウマチで</td>
+		<td>歯/膝など関節</td>
+		<td>痛む</td>
+	</tr>
+	<tr>
+		<td>ぺこぺこ</td>
+		<td>朝から何でも食べていない</td>
+		<td>お腹が</td>
+		<td>（～だ）</td>
+	</tr>
+	<tr>
+		<td>ぺこぺこ</td>
+		<td>お客様に</td>
+		<td>頭を</td>
+		<td>する<br>おじぎをする </td>
+	</tr>
+	<tr>
+		<td>がんがん</td>
+		<td>二日酔いで</td>
+		<td>頭が</td>
+		<td>する</td>
+	</tr>
+	<tr>
+		<td>からから</td>
+		<td>暑い日に運動した<br>砂漠にいる</td>
+		<td>のどが</td>
+		<td>にする</td>
+	</tr>
+	<tr>
+		<td>むかむか</td>
+		<td>胃の調子が悪い<br>飲みすぎ</td>
+		<td>胸が/胃が</td>
+		<td>する</td>
+	</tr>
+	<tr>
+		<td>むかむか</td>
+		<td>態度の悪い人に会って不愉快</td>
+		<td>ー</td>
+		<td>する</td>
+	</tr>
+	<tr>
+		<td>ひりひり</td>
+		<td>やけど/日焼けした</td>
+		<td>背中/腕が etc.</td>
+		<td>する</td>
+	</tr>
+	<tr>
+		<td>ぞくぞく</td>
+		<td>風をひいて熱が出そう</td>
+		<td>背中が/ぞくぞく寒気が</td>
+		<td>する</td>
+	</tr>
+</table>
+
+- ずきんと・・・
+> 立ち上げったら、怪我をした足が<span style="color:red">ずきんと</span>いたんだ。
+
+- ぺこぺこ：お腹がすいている
+> お昼を食べないで仕事をしていたので、お腹がが<span style="color:red">ぺこぺこ</span>だ。
+
+- ぺこぺこ：人の機嫌をとるように何度もお辞儀をする
+> 課長は部長にいつも<span style="color:red">ぺこぺこ</span>している。
+
+- がんがん：頭が強く打たれるように痛む
+> 二日酔いで頭が<span style="color:red">がんがん</span>する。
+
+- からから：喉がとてもかわいている様子
+> 暑い日にスポーツをしていたら、喉が<span style="color:red">からから</span>になった。
+
+- むかむか：はき気がして気分が悪い様子
+> 昨日は飲みすぎだ。胸が<span style="color:red">むかむか</span>する。
+
+- むかむか：怒っている様子
+> あの店の人の失礼な話し方に<span style="color:red">むかむか</span>してしまった。
+
+- ひりひり：火傷や日焼けによる皮膚の痛み
+> プールサイドで寝てしまった。日焼けしすぎて、腕や肩が<span style="color:red">ひりひり</span>する。
+
+- ぞくぞく：発熱する前の寒気を強く感じる様子
+> 夕方から<span style="color:red">ぞくぞく</span>寒気がするので、今日は薬を飲んで早く寝よう。
+
+
+⭐ その他の表現：
+- ずきずきする痛みがある avoir des élancements
+- きりきりする痛みです c'est une douleur lancinante
+- 刺すような痛みです c'est comme avoir des coups de couteau
+- ふらふらする chanceler
+- ボーっとする（ぼうっとする）être abruti
+- コンコン/ゴホン tousser
+
+## 7.D) 念のため
+
+よく一緒に使われる表現：念のため＋～しておく/～してみる/～してみてください/しましょう/してから、...する
+
+> 重い病気ではないと思いますが、<span style="color:red">念のために</span>検査をしておきましょう。
+
+> 明日の会議の期間変更について、田中さんの留守番電話にメッセージを残したが、<span style="color:red">念のために</span>メールも送っておいた。
+
+> 書類は、<span style="color:red">念のために</span>コピーを取ってから提出しましょう。
+
+> 今朝インターネットのトラブルがあったので、<span style="color:red">念のために</span>テストメールを送ってみよう。
+
+## 7.E) (時間)　する (時間が経つ)
+
+「時間＋して / してから / しても / すると / すれば / したら」などの表現の中で使う。
+
+❗　文の最後に使わない。  
+❌ 新幹線で大阪に行くには、３時間くらいします。  
+❌ このレポートを書き上げるには（レポートが終わるのに）、5時間くらいする。
+
+> 昨日プレゼントを郵便で送りました。1週間<span style="color:red">して</span>も届かない場合はお電話ください。
+
+> いやなことは、3日も<span style="color:red">すれば</span>忘れてしまう。楽天家なんです。
+
+> 砂糖：田中さん、いらっしゃいますか。  
+> 吉田：すみません、今、電話中です。  
+> 砂糖：じゃあ、10分くらい<span style="color:red">して</span>からまたお電話します。
+
+## 7.F) ～ずつ
+
+🍎一つ、🍋一つ、🍇一つ　-> 🍎🍋🍇一つずつ
+
+> この白い薬は、毎食後2錠<span style="color:red">ずつ</span>のんでください。
+
+> りんごとみかんを３つ<span style="color:red">ずつ</span>買ってきてください。
+
+> レストランで、エビアンと白ワインを1本<span style="color:red">ずつ</span>注文した。
+
+> クラスの学生全員、１冊<span style="color:red">ずつ</span>ノートが配れた。
+
+> 健康のために、毎日朝晩30分<span style="color:red">ずつ</span>ウォーキングをしている。
+
+＊少しずつ、ちょうとずつ
+> 毎日日本語を勉強しているので、<span style="color:red">少しずつ</span>会話が上手になってきた。
+
+> このお酒はとても強いので、<span style="color:red">ちょっとずつ</span>のんだ。
