Add lessons up to 8.E

--- a/notes/2021-2022.md
+++ b/notes/2021-2022.md
@@ -1511,3 +1511,85 @@ Nが漢字のことばの場合：「ごNください」の言い方もあり。
 > 毎日日本語を勉強しているので、<span style="color:red">少しずつ</span>会話が上手になってきた。
 
 > このお酒はとても強いので、<span style="color:red">ちょっとずつ</span>のんだ。
+
+# 第8課
+
+## 8.A) おV<s>ます</s>＋ですか　(尊敬語）
+
+「～ます/～ています/～ました」の意味。
+
+❗ 「ます」の前がひらがな一つの動詞の場合は、この言い方はできない。
+
+> いらっしゃいませ。こちらで<span style="color:red">お召し上がりですか</span>。（＝食べますか）
+
+> 部長は何時ごろ<span style="color:red">お帰りですか</span>。（＝帰りますか）
+
+> お客様が会議室で<span style="color:red">お待ちです</span>。（＝持っています）
+
+> 先生、この問題についてどう<span style="color:red">お考えですか</span>。（＝考えていますか）
+
+> 来週ストがあることを、もう<span style="color:red">お聞きですか</span>。（＝聞きましたか）
+
+> 何時に<span style="color:red">御出発ですか</span>。
+
+> 明日<span style="color:red">御帰国ですか</span>。
+
+## 8.B) Nなんか
+
+「～など」のくだけた（familier）の言い方。
+
+> 妹：お父さんの誕生日プレゼントは何がいいかな。  
+> 姉：お財布<span style="color:red">なんか</span>どう？
+
+> 中川：マルタンさん、日本語が上手になりましたね。JLPTのN1を受けたらどうですか。  
+> マルタン：いえいえ、私<span style="color:red">なんか</span>、まだまだ受かりませんよ。(modeste)
+
+> 妹：お兄ちゃんのギター、ひかせて。  
+> 兄：だめだめ、大事なギターなんだから。  
+> 妹：意地悪！お兄ちゃん<span style="color:red">なんか</span>、きらい。(péjoratif)
+
+> 妹：お兄ちゃん、こんなつまらない番組<span style="color:red">なんか</span>見たくない。チャネル変えていい？ (péjoratif)   
+> 兄：ダメだよ。毎週見ているんだから。
+
+> 母：ゲーム<span style="color:red">なんか</span>していないで、早く宿題をしなさい。(péjoratif/アドバイス)
+
+## 8.C) V1たら、V2た　(découverte, apparition)
+
+❗　「たら」の後 -> sans volonté  
+❌ <s>雨が降ったら、バイキングに行かなかった。</s>
+
+> 会社に行こうとしてドアを開け<span style="color:red">たら、</span>大きな犬がいたのでびっくりし<span style="color:red">た</span>。
+
+> 近所の公園に行っ<span style="color:red">たら、</span>桜が咲いてい<span style="color:red">た</span>。
+
+> 雨が降っ<span style="color:red">たら、</span>涼しくなっ<span style="color:red">た</span>。
+
+> お酒を飲ん<span style="color:red">だら、</span>気分が悪くなっ<span style="color:red">た</span>。
+
+## 8.D) Vdico/Vない ＋ように言う (dire à qqn de~/que~)
+
+「伝える、頼む、注意する、お願いする」なども使える。
+
+> 部長は田中さんに「大阪まで出張してください」と言いました。（直接引用 citation directe）  
+=>  
+> 部長は田中さんに大阪まで出張するよ<span style="color:red">うに言いました</span>。（間接引用 citation indirecte）
+
+> 林：田中さん、明日仕事の後、飲みに行きませんか。  
+> 田中：明日はちょうっと…。部長に大阪まで出張する<span style="color:red">ようにいわれた</span>ので。
+
+> 医者は看護師にすぐ手術の準備をする<span style="color:red">ように言いました</span>。
+
+> 先生は学生に授業中は携帯電話を使わない<span style="color:red">ように注意した</span>。
+
+## 8.E) Nとして (comme)
+
+1. 資格（qualification）・立場（position）
+> まり子さんは、アメリカの会社で部長のアシスタントとして働いている。
+
+> 来年子供が生まれるので、アルバイトではなく正社員として仕事をしないんです。
+
+2. 部類（catégorie）・分類（classification）
+
+> 割れたガラスのコップは、燃えないごみとしてすててください。
+
+> 秋葉原は、オタクの町として有名だ。
