--- a/notes/2021-2022.md
+++ b/notes/2021-2022.md
@@ -1584,12 +1584,33 @@ Nが漢字のことばの場合：「ごNください」の言い方もあり。
 ## 8.E) Nとして (comme)
 
 1. 資格（qualification）・立場（position）
-> まり子さんは、アメリカの会社で部長のアシスタントとして働いている。
+> まり子さんは、アメリカの会社で部長のアシスタント<span style="color:red">として</span>働いている。
 
-> 来年子供が生まれるので、アルバイトではなく正社員として仕事をしないんです。
+> 来年子供が生まれるので、アルバイトではなく正社員<span style="color:red">として</span>仕事をしないんです。
 
 2. 部類（catégorie）・分類（classification）
 
-> 割れたガラスのコップは、燃えないごみとしてすててください。
+> 割れたガラスのコップは、燃えないごみ<span style="color:red">として</span>すててください。
 
-> 秋葉原は、オタクの町として有名だ。
+> 秋葉原は、オタクの町<span style="color:red">として</span>有名だ。
+
+## 8.F) VられるN　（受身）
+
+> あれが来年<span style="color:red">壊されるビル</span>です。  
+80年前に建てられたんですが、大きい地震の時に危ないので、新しいビルにするんです。
+
+> 去年<span style="color:red">取られた</span>子供の自転車が、昨日みつかった。
+
+> これから面接試験をします。田中さん、マルタンさん、中川さん、山口さん。今<span style="color:red">呼ばれた</span>人は、この部屋に入ってください。
+
+## 8.G) Vられる/られない (受身) ＋と
+
+> 週末に夫の母に<span style="color:red">来られると</span>、ゆっくり休むことができない。
+
+> 夜遅くまで近所でパーティを<span style="color:red">されると</span>、うるさくて寝られない。
+
+> 電車のストを<span style="color:red">されると</span>、会社に行くことができなくて困る。
+
+> 誰がに<span style="color:red">教えられないと</span>、日本人でも敬語を使いのは難しい。
+
+> 小さい子供は、<span style="color:red">怒られないと</span>、してはいけないことが分からない。
